force-app/main/default/objects/ACVehiculos__c/ACVehiculos__c.object-meta.xml
<CustomObject>
    <description>Retorna información de los vehículos.</description>
    <label>Vehículos</label>
    <nameField>
        <label>Nombre de Vehículo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehículos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>