force-app/main/default/objects/ACVehiculos__c/fields/Anno__c.field-meta.xml
<CustomField>
    <fullName>Anno__c</fullName>
    <description>Año del modelo del vehículo.</description>
    <label>Año del modelo del vehículo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>