force-app/main/default/objects/ACVehiculos__c/fields/Chasis__c.field-meta.xml
<CustomField>
    <fullName>Chasis__c</fullName>
    <label>Chasis del vehículo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>