force-app/main/default/objects/ACVehiculos__c/fields/Codigo_del_modelo_generico__c.field-meta.xml
<CustomField>
    <fullName>Codigo_del_modelo_generico__c</fullName>
    <label>Código del módelo genérico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>