force-app/main/default/objects/ACVehiculos__c/fields/Codigo_modelo_fabrica__c.field-meta.xml
<CustomField>
    <fullName>Codigo_modelo_fabrica__c</fullName>
    <label>Código modelo fabrica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>