force-app/main/default/objects/ACVehiculos__c/fields/ColorInterno__c.field-meta.xml
<CustomField>
    <fullName>ColorInterno__c</fullName>
    <label>Color interno del vehículo</label>
    <length>16</length>
    <type>Text</type>
</CustomField>