force-app/main/default/objects/ACVehiculos__c/fields/DescCodigoVehiculo__c.field-meta.xml
<CustomField>
    <fullName>DescCodigoVehiculo__c</fullName>
    <label>Código del vehículo</label>
    <length>16</length>
    <type>Text</type>
</CustomField>