force-app/main/default/objects/ACVehiculos__c/fields/Descripci_n_Linea_de_neogco__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n_Linea_de_neogco__c</fullName>
    <label>Descripción Linea de neogco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>