force-app/main/default/objects/ACVehiculos__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripción del vehículo</label>
    <type>TextArea</type>
</CustomField>