force-app/main/default/objects/ACVehiculos__c/fields/Descripcion_codigo_del_vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_codigo_del_vehiculo__c</fullName>
    <label>Descripción código del vehículo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>