force-app/main/default/objects/ACVehiculos__c/fields/Descripcion_de_la_marca__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_de_la_marca__c</fullName>
    <label>Descripción de la marca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>