force-app/main/default/objects/ACVehiculos__c/fields/Descripcion_del_modelo_generico__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_del_modelo_generico__c</fullName>
    <label>Descripción del modelo genérico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>