force-app/main/default/objects/ACVehiculos__c/fields/Descripcion_modelo_fabrica__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_modelo_fabrica__c</fullName>
    <label>Descripción modelo fabrica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>