force-app/main/default/objects/ACVehiculos__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Estado del vehículo.</description>
    <inlineHelpText>Describe el estado del vehículo.</inlineHelpText>
    <label>Estado del vehículo</label>
    <length>16</length>
    <type>Text</type>
</CustomField>