force-app/main/default/objects/ACVehiculos__c/fields/Factura__c.field-meta.xml
<CustomField>
    <fullName>Factura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factura</label>
    <referenceTo>FacturasMaestro__c</referenceTo>
    <relationshipName>Veh_culos</relationshipName>
    <type>Lookup</type>
</CustomField>