force-app/main/default/objects/ACVehiculos__c/fields/IdExt_Veh_culo__c.field-meta.xml
<CustomField>
    <fullName>IdExt_Veh_culo__c</fullName>
    <externalId>true</externalId>
    <label>IdExt Vehículo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>