force-app/main/default/objects/ACVehiculos__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <description>Muestra la mara del vehículo.</description>
    <label>Marca del vehículo</label>
    <length>16</length>
    <type>Text</type>
</CustomField>