force-app/main/default/objects/ACVehiculos__c/fields/Marca_UDC__c.field-meta.xml
<CustomField>
    <fullName>Marca_UDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marca</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Marca</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipName>Veh_culos</relationshipName>
    <type>Lookup</type>
</CustomField>