force-app/main/default/objects/ACVehiculos__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <description>Modelo del vehículo</description>
    <label>Modelo del vehículo</label>
    <length>32</length>
    <type>Text</type>
</CustomField>