force-app/main/default/objects/ACVehiculos__c/fields/ModeloFabrica__c.field-meta.xml
<CustomField>
    <fullName>ModeloFabrica__c</fullName>
    <label>Modelo de fábrica del vehículo</label>
    <length>32</length>
    <type>Text</type>
</CustomField>