force-app/main/default/objects/ACVehiculos__c/fields/Motor__c.field-meta.xml
<CustomField>
    <fullName>Motor__c</fullName>
    <label>Motor del vehículo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>