force-app/main/default/objects/ACVehiculos__c/fields/MPP__c.field-meta.xml
<CustomField>
    <fullName>MPP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si tiene mantenimiento prepagado.</description>
    <inlineHelpText>¿Cuenta con mantenimiento prepagado?</inlineHelpText>
    <label>Mantenimiento prepagado</label>
    <type>Checkbox</type>
</CustomField>