force-app/main/default/objects/ACVehiculos__c/fields/Mtto_Prepagado__c.field-meta.xml
<CustomField>
    <fullName>Mtto_Prepagado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mtto. Prepagado</label>
    <type>Checkbox</type>
</CustomField>