force-app/main/default/objects/ACVehiculos__c/fields/NumCorto__c.field-meta.xml
<CustomField>
    <fullName>NumCorto__c</fullName>
    <label>Número corto del vehículo</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>