force-app/main/default/objects/ACVehiculos__c/fields/NumFactura__c.field-meta.xml
<CustomField>
    <fullName>NumFactura__c</fullName>
    <description>Número de factura asociado al vehículo.</description>
    <inlineHelpText>Número de factura asociado al vehículo.</inlineHelpText>
    <label>Número de factura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>