force-app/main/default/objects/ACVehiculos__c/fields/Recorrido__c.field-meta.xml
<CustomField>
    <fullName>Recorrido__c</fullName>
    <description>Kilómetros recorridos por el vehículo.</description>
    <label>KM recorrido del vehículo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>