force-app/main/default/objects/ACVehiculos__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Tipo de vehículo.</description>
    <label>Tipo de vehículo</label>
    <length>16</length>
    <type>Text</type>
</CustomField>